[gd_scene load_steps=35 format=3 uid="uid://6as4wpb3gj0c"]

[ext_resource type="Script" path="res://scripts/Multiplayer/multiplayer_controller.gd" id="1_6iy7i"]
[ext_resource type="Script" path="res://scripts/Multiplayer/multiplayer_input.gd" id="2_jd3a0"]
[ext_resource type="Script" path="res://addons/netfox/rollback/rollback-synchronizer.gd" id="3_0ylj1"]
[ext_resource type="Script" path="res://addons/netfox/tick-interpolator.gd" id="4_a4bpk"]
[ext_resource type="Texture2D" uid="uid://blwkda7ax2um3" path="res://assets/sprites/knight.png" id="5_c1yq3"]
[ext_resource type="AudioStream" uid="uid://ftsx4xc3fx8o" path="res://assets/sounds/jump.wav" id="6_i0wwg"]
[ext_resource type="AudioStream" uid="uid://yfla5l8cutsg" path="res://assets/sounds/hurt.wav" id="7_wd1m6"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_qf7o8"]
properties/0/path = NodePath(".:player_id")
properties/0/spawn = true
properties/0/replication_mode = 0

[sub_resource type="AtlasTexture" id="AtlasTexture_0i32m"]
atlas = ExtResource("5_c1yq3")
region = Rect2(64, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e5urt"]
atlas = ExtResource("5_c1yq3")
region = Rect2(64, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fnn55"]
atlas = ExtResource("5_c1yq3")
region = Rect2(96, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pnt4j"]
atlas = ExtResource("5_c1yq3")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_owbny"]
atlas = ExtResource("5_c1yq3")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_speii"]
atlas = ExtResource("5_c1yq3")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wqyxb"]
atlas = ExtResource("5_c1yq3")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_etppy"]
atlas = ExtResource("5_c1yq3")
region = Rect2(192, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pnrsf"]
atlas = ExtResource("5_c1yq3")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w5hkp"]
atlas = ExtResource("5_c1yq3")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_82umn"]
atlas = ExtResource("5_c1yq3")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s6u7x"]
atlas = ExtResource("5_c1yq3")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yn83b"]
atlas = ExtResource("5_c1yq3")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p4vc8"]
atlas = ExtResource("5_c1yq3")
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8fmgx"]
atlas = ExtResource("5_c1yq3")
region = Rect2(192, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2vq0p"]
atlas = ExtResource("5_c1yq3")
region = Rect2(224, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_03vky"]
atlas = ExtResource("5_c1yq3")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pmaxf"]
atlas = ExtResource("5_c1yq3")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5atvo"]
atlas = ExtResource("5_c1yq3")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3iks3"]
atlas = ExtResource("5_c1yq3")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3n21t"]
atlas = ExtResource("5_c1yq3")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dfnv3"]
atlas = ExtResource("5_c1yq3")
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_krvo2"]
atlas = ExtResource("5_c1yq3")
region = Rect2(192, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kupa4"]
atlas = ExtResource("5_c1yq3")
region = Rect2(224, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_o05cy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0i32m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0i32m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0i32m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e5urt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fnn55")
}],
"loop": false,
"name": &"death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pnt4j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_owbny")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_speii")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wqyxb")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_etppy")
}],
"loop": true,
"name": &"jump",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pnrsf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w5hkp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_82umn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s6u7x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yn83b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p4vc8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8fmgx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2vq0p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_03vky")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pmaxf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5atvo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3iks3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3n21t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dfnv3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_krvo2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kupa4")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_r7h6p"]
radius = 5.0

[node name="MultiplayerPlayer" type="CharacterBody2D" node_paths=PackedStringArray("input")]
collision_layer = 2
script = ExtResource("1_6iy7i")
input = NodePath("Input")

[node name="PlayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_qf7o8")

[node name="Input" type="Node" parent="."]
script = ExtResource("2_jd3a0")

[node name="RollbackSynchronizer" type="Node" parent="." node_paths=PackedStringArray("root")]
script = ExtResource("3_0ylj1")
root = NodePath("..")
state_properties = Array[String]([":global_transform", ":velocity", ":global_position"])
input_properties = Array[String](["Input:input_direction", "Input:input_jump", "Input:reload"])

[node name="TickInterpolator" type="Node" parent="." node_paths=PackedStringArray("root")]
script = ExtResource("4_a4bpk")
root = NodePath("..")
properties = Array[String]([":global_transform", ":velocity", ":global_position"])

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -12)
sprite_frames = SubResource("SpriteFrames_o05cy")
animation = &"death"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_r7h6p")

[node name="jump" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_i0wwg")
bus = &"SFX"

[node name="hurt" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_wd1m6")
bus = &"SFX"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(1, -5)
zoom = Vector2(3, 3)
limit_bottom = 80
limit_smoothed = true
position_smoothing_enabled = true

[node name="RespawnTimer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 64
text = "Winner"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerName" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 64
text = "
"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="timeout" from="RespawnTimer" to="." method="_on_respawn_timer_timeout"]
